--- a/index.html
+++ b/index.html
@@ -1,108 +1,161 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-	<title>Táblázatok</title>
+	<title>Első weboldalam</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<table>
-	<caption>Könyvek</caption>
-	<colgroup>
-		<col>
-		<col>
-		<col>
-		<col>
-		<col style="background-color:yellow">
-	</colgroup>
-	<thead>
-		<tr>
-			<th>cikkszám</th>
-			<th>szerő</th>
-			<th>cím</th>
-			<th>készlet</th>
-			<th>ár</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>123313</td>
-			<td>Frei Tamás</td>
-			<td>Bábel</td>
-			<td>2 db</td>
-			<td>4 464 Ft</td>
-		</tr>
-		<tr>
-			<td>893421</td>
-			<td>Lőrincz L. László</td>
-			<td>A sárkány éve</td>
-			<td>4 db</td>
-			<td>3 290 Ft</td>
-		</tr>
-		<tr>
-			<td>654213</td>
-			<td>Szabó Magda</td>
-			<td>Abigél</td>
-			<td>3 db</td>
-			<td>4 990 Ft</td>
-		</tr>
-		<tr>
-			<td>112567</td>
-			<td>Jókai Mór</td>
-			<td>Az arany ember</td>
-			<td>5 db</td>
-			<td>2 899 Ft</td>
-		</tr>
-		<tr>
-			<td>785312</td>
-			<td>Leiner Laura</td>
-			<td>A Szent Johanna gimi</td>
-			<td>4 db</td>
-			<td>3 450 Ft</td>
-		</tr>
-		<tr>
-			<td>998742</td>
-			<td>Dragomán György</td>
-			<td>A fehér király</td>
-			<td rowspan="2">6 db</td>
-			<td>4 100 Ft</td>
-		</tr>
-		<tr>
-			<td>334125</td>
-			<td>Molnár Ferenc</td>
-			<td>A Pál utcai fiúk </td>
-			<td>3 750 Ft</td>
-		</tr>
-		<tr>
-			<td>561294</td>
-			<td>Kondor Vilmos</td>
-			<td>Budapest Noir</td>
-			<td>7 db</td>
-			<td>4 299 Ft</td>
-		</tr>
-		<tr>
-			<td>471258</td>
-			<td>Márai Sándor </td>
-			<td>A gyertyák csonkig égnek</td>
-			<td>6 db</td>
-			<td>3 890 Ft</td>
-		</tr>
-		<tr>
-			<td>217894</td>
-			<td>Gárdonyi Géza</td>
-			<td>Egri csillagok</td>
-			<td>8 db</td>
-			<td>3 990 Ft</td>
-		</tr>
-	</tbody>
-	<tfoot>
-		<tr>
-			<td  style="background-color:grey" colspan="4">Összesen:</td>
-			<td  style="background-color:red">39 122 Ft</td>
-		</tr>
-	</tfoot>
-</table>
+<p>Lorem ipsum<br> dolor sit amet, consectetur adipiscing elit. <u>Maecenas</u> maximus ipsum ante, eget lacinia augue accumsan ut. <i>Vestibulum</i> eleifend ultrices felis at pulvinar. <b>Quisque</b> <strong>bibendum</strong> metus a nisl maximus, non finibus mi faucibus. <small>Sed porttitor</small> sit amet odio ut interdum. <s>Pellentesque gravida sem</s> urna, eget placerat nisi rhoncus quis. C<sup>°</sup> tincidunt nunc et condimentum dapibus. <sub>Aenean</sub> felis odio, sodales vel libero id, volutpat egestas dolor. <mark>Ut ut velit leo.</mark> Quisque eu arcu vitae lacus sagittis fringilla. Fusce mauris dui, egestas in purus quis, ullamcorper imperdiet mi.</p>
+
+<p>Quisque pharetra tellus diam, vel rutrum sem porta nec. <del>Proin id ex laoreet, blandit velit sit amet, ornare purus.</del> <ins>Integer blandit tempor sagittis.</ins> Nunc in ipsum magna. Integer tincidunt libero a nisi vulputate, in eleifend neque luctus. Maecenas vulputate finibus aliquet.</p>
+
+<p>Quisque finibus sed nunc eget ultricies. Praesent ut consequat quam. Sed eget metus velit. Proin a facilisis lectus. Praesent et sapien neque. Duis condimentum nisl sed sem lacinia, vitae porta magna auctor. Morbi eu vestibulum eros. Aliquam vel augue id mauris mollis consectetur. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent sollicitudin purus ligula, vitae feugiat lacus consequat in. Suspendisse sed nulla vitae urna aliquet hendrerit. Mauris vitae erat mi. Suspendisse potenti.</p>
+
+<p>Fusce molestie justo ut felis dapibus elementum. Aliquam velit eros, vestibulum sed pretium eget, vehicula id nulla. Praesent nec tellus non tellus auctor pellentesque. Nam in risus a magna vulputate faucibus. Vivamus lobortis rutrum interdum. Vivamus eleifend leo dui, eget volutpat diam mollis eget. Quisque a tempor lorem.</p>
+
+<p>Cras viverra malesuada ex eu fringilla. Nam a velit justo. Vivamus placerat vulputate tristique. Maecenas erat elit, consectetur finibus massa eu, hendrerit porta justo. In hac habitasse platea dictumst. Aenean et justo pellentesque, dignissim ipsum id, vulputate velit. Ut sit amet eleifend orci. Etiam blandit lorem justo, in feugiat dui placerat at. Vestibulum non tortor bibendum, vestibulum mauris ornare, volutpat risus. Pellentesque vitae ex sed tortor suscipit sodales. Donec porttitor sit amet magna nec suscipit. Nulla in eleifend risus. Donec maximus, nibh id sollicitudin sodales, leo neque vehicula dui, eget elementum mi nisi viverra augue.</p>
+
+<blockquote cite="http://www.worldwildlife.org/who/index.html">Integer fringilla accumsan sapien sed laoreet. Donec pellentesque blandit tellus, sed ullamcorper tellus malesuada at.</blockquote>
+
+<p><abbr title="Hyper Text Markup Language">HTML</abbr></p>
+
+<h1>Első címsor</h1>
+<h2>Második címsor</h2>
+<h3>Harmadik címsor</h3>
+<h4>Negyedi címsor</h4>
+<h5>Ötödik címsor</h5>
+<h6>Hatodik címsor</h6>
+
+<hr>
+
+<p>Ma reggel <time>08:00</time>-kor keltem.</p>
+
+<dl>
+	<dt>Kalapács</dt>
+	<dd>A kalapács az a szerszám ami mindig kéznél van.</dd>
+	<dt>Csavar</dt>
+	<dd>A csavar elemek rögzítésére szolgál</dd>
+</dl>
+
+<ol type="A">
+	<li>piros</li>
+	<li>kék</li>
+	<li>sárga</li>
+</ol>
+
+<ul>
+	<li>piros</li>
+	<li>kék</li>
+	<li>sárga</li>
+</ul>
+
+<a href="https://www.cyrex.hu" target="_blank">Saját weboldalam</a>
+<a href="mailto:cyrex@cyrex.hu" target="_blank">E-mail</a>
+
+<figure>
+	<img src="pics/bg-body.jpg" alt="World of Tanks">
+	<figcaption>WoT...</figcaption>
+</figure>
+
+<main>
+	Weboldalnak a tényleges tartalma.
+	Csak egy darab lehet.
+	Egyedi tartalommal kell rendelkeznie.
+</main>
+
+<nav>
+	Navigáció.
+</nav>
+
+<h1>Címsor</h1>
+
+<article>
+	<h2>Cikk címe...</h2>
+	<p>tartalma...</p>
+</article>
+
+<p>Budapesten jártam a nayáron.</p>
+
+<aside>
+	Budapest Magyarország fővárosa.
+</aside>
+
+<footer></footer>
+<header></header>
+
+<div></div>
+
+<h1>Űrlapok</h1>
+
+<form method="POST">
+
+	<fieldset>
+		<legend>űrlap címe</legend>
+		
+		<ul>
+			<li>
+				<input type="text">
+			</li>
+			<li>
+				<input type="email">
+			</li>
+			<li>
+				<input type="password">
+			</li>
+			<li>
+				<label for="phone">Telefonszám</label>
+				<input type="tel" id="phone">
+			</li>
+			<li>
+				<input type="file">
+			</li>
+			<li>
+				<label for="date">Dátum</label>
+				<input type="checkbox" id="date">
+			</li>
+			<li>
+				<label for="elso">Első</label> <input type="radio" name="valassz" id="elso">
+				<label for="masodik">Második</label> <input type="radio" name="valassz" id="masodik">
+				<label for="harmadik">Harmadik</label> <input type="radio" name="valassz" id="harmadik">
+			</li>
+			<li>
+				<input type="submit" value="felirat...">
+				<button type="submit">felirat...</button>
+			</li>
+			<li>
+				<select>
+					<option>piros</option>
+					<option>kék</option>
+					<option>sárga</option>
+				</select>
+			</li>
+			<li>
+				<select>
+					<optgroup label="Olasz autók">
+					<option>Fiat</option>
+					<option>Alfa Romeo</option>
+					</optgroup>
+					<optgroup label="Német autók">
+					<option>Audi</option>
+					<option>Mercedes</option>
+					</optgroup>
+				</select>
+			</li>
+			<li>
+				<textarea></textarea>
+			</li>
+			<li>
+				<progress value="25" max="100"></progress>
+			</li>
+			<li>
+				<button>Gombocska</button>
+			</li>
+		</ul>
+		
+	</fieldset>
+</form>
 
 </body>
 </html>
