--- a/index.html
+++ b/index.html
@@ -1,108 +1,13 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-	<title>Táblázatok</title>
+	<title>CSS</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" type="image/png" href="pics/favicon.png">
 </head>
 <body>
-
-<table>
-	<caption>Könyvek</caption>
-	<colgroup>
-		<col>
-		<col>
-		<col>
-		<col>
-		<col style="background-color:yellow">
-	</colgroup>
-	<thead>
-		<tr>
-			<th>cikkszám</th>
-			<th>szerő</th>
-			<th>cím</th>
-			<th>készlet</th>
-			<th>ár</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>123313</td>
-			<td>Frei Tamás</td>
-			<td>Bábel</td>
-			<td>2 db</td>
-			<td>4 464 Ft</td>
-		</tr>
-		<tr>
-			<td>893421</td>
-			<td>Lőrincz L. László</td>
-			<td>A sárkány éve</td>
-			<td>4 db</td>
-			<td>3 290 Ft</td>
-		</tr>
-		<tr>
-			<td>654213</td>
-			<td>Szabó Magda</td>
-			<td>Abigél</td>
-			<td>3 db</td>
-			<td>4 990 Ft</td>
-		</tr>
-		<tr>
-			<td>112567</td>
-			<td>Jókai Mór</td>
-			<td>Az arany ember</td>
-			<td>5 db</td>
-			<td>2 899 Ft</td>
-		</tr>
-		<tr>
-			<td>785312</td>
-			<td>Leiner Laura</td>
-			<td>A Szent Johanna gimi</td>
-			<td>4 db</td>
-			<td>3 450 Ft</td>
-		</tr>
-		<tr>
-			<td>998742</td>
-			<td>Dragomán György</td>
-			<td>A fehér király</td>
-			<td rowspan="2">6 db</td>
-			<td>4 100 Ft</td>
-		</tr>
-		<tr>
-			<td>334125</td>
-			<td>Molnár Ferenc</td>
-			<td>A Pál utcai fiúk </td>
-			<td>3 750 Ft</td>
-		</tr>
-		<tr>
-			<td>561294</td>
-			<td>Kondor Vilmos</td>
-			<td>Budapest Noir</td>
-			<td>7 db</td>
-			<td>4 299 Ft</td>
-		</tr>
-		<tr>
-			<td>471258</td>
-			<td>Márai Sándor </td>
-			<td>A gyertyák csonkig égnek</td>
-			<td>6 db</td>
-			<td>3 890 Ft</td>
-		</tr>
-		<tr>
-			<td>217894</td>
-			<td>Gárdonyi Géza</td>
-			<td>Egri csillagok</td>
-			<td>8 db</td>
-			<td>3 990 Ft</td>
-		</tr>
-	</tbody>
-	<tfoot>
-		<tr>
-			<td  style="background-color:grey" colspan="4">Összesen:</td>
-			<td  style="background-color:red">39 122 Ft</td>
-		</tr>
-	</tfoot>
-</table>
 
 </body>
 </html>
