--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 </head>
 <body>
 
-<div>
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget cursus nisl. Duis nibh magna, congue ut magna id, blandit gravida arcu. Nullam volutpat lacinia iaculis. Phasellus ligula enim, convallis sed consequat ut, luctus aliquam quam. Pellentesque euismod lacus eget nulla vestibulum, ut lacinia nunc sodales. Etiam imperdiet nisl ipsum, sit amet consectetur mi luctus eu. Etiam egestas turpis et velit tempus, convallis mollis quam molestie. Mauris tristique, erat eget luctus semper, neque arcu fringilla ipsum, nec dapibus nunc est sit amet nibh.
+<div class="box">
+	<div class="header-image"></div>
+	<div class="box-content">
+		<h2>World of Tanks Modern Armor</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget cursus nisl. Duis nibh magna, congue ut magna id, blandit gravida arcu. Nullam volutpat lacinia iaculis. Phasellus ligula enim, convallis sed consequat ut, luctus aliquam quam. Pellentesque euismod lacus eget nulla vestibulum, ut lacinia nunc sodales. Etiam imperdiet nisl ipsum, sit amet consectetur mi luctus eu. Etiam egestas turpis et velit tempus, convallis mollis quam molestie. Mauris tristique, erat eget luctus semper, neque arcu fringilla ipsum, nec dapibus nunc est sit amet nibh.</p>
+		<p class="details"><a href="">Megnézem</a></p>
+	</div>
+</div>
+
+<div class="box box-2">
+	<div class="header-image"></div>
+	<div class="box-content">
+		<h2>World of Tanks Modern Armor</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eget cursus nisl. Duis nibh magna, congue ut magna id, blandit gravida arcu. Nullam volutpat lacinia iaculis. Phasellus ligula enim, convallis sed consequat ut, luctus aliquam quam. Pellentesque euismod lacus eget nulla vestibulum, ut lacinia nunc sodales. Etiam imperdiet nisl ipsum, sit amet consectetur mi luctus eu. Etiam egestas turpis et velit tempus, convallis mollis quam molestie. Mauris tristique, erat eget luctus semper, neque arcu fringilla ipsum, nec dapibus nunc est sit amet nibh.</p>
+		<p class="details"><a href="">Megnézem</a></p>
+	</div>
 </div>
 
 </body>
